--- a/package.json
+++ b/package.json
@@ -1,36 +1,17 @@
 {
-	"name": "templates",
-	"displayName": "Templates",
-	"description": "react-vue-template",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.30.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:extension.helloWorld"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [{
-			"command": "extension.helloWorld",
-			"title": "Hello World"
-		}]
-	},
-	"scripts": {
-		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "yarn run compile && node ./node_modules/vscode/bin/test"
-	},
-	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
-		"@types/node": "^8.10.25",
-		"@types/mocha": "^2.2.42"
-	}
+  "name": "TemplateCLI",
+  "version": "1.0.0",
+  "description": "vue or react template cli",
+  "bin": {
+    "build-react": "bin/index"
+  },
+  "repository": "https://github.com/sillyY/TemplateCLI.git",
+  "author": "sillyy <965768042@qq.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "chalk": "^2.4.2",
+    "commander": "^2.20.0",
+    "inquirer": "^6.3.1",
+    "ora": "^3.4.0"
+  }
 }
