add 格式检测, 路径创建

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "commander": "^2.20.0",
     "inquirer": "^6.3.1",
     "ora": "^3.4.0"
+  },
+  "dependencies": {
+    "mkdirp": "^0.5.1"
   }
 }
