--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-template-cli",
-  "version": "0.0.2",
+  "version": "0.0.8",
   "description": "vue or react template cli",
   "bin": {
     "tcli": "bin/index.js"
@@ -8,12 +8,13 @@
   "repository": "https://github.com/sillyY/TemplateCLI.git",
   "author": "sillyy <965768042@qq.com>",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "download-git-repo": "^2.0.0",
     "inquirer": "^6.3.1",
+    "mkdirp": "^0.5.1",
     "ora": "^3.4.0",
-    "mkdirp": "^0.5.1"
+    "rimraf": "^2.6.3"
   }
 }
